--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,83 +1,20 @@
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://apis.google.com/js/client.js"></script>
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
-  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-  <title class='center-align'>THS Sign Up</title>
+  <title class='center-align'>Rowbook</title>
 </head>
  
 <body>
-  <div class="container">
+  <!-- <div class="container"> -->
     <header>
-      <h1>THS Sign up</h1>
+      <h1>Rowbook</h1>
     </header>
-      {{> atForm}}
 
-      {{#if currentUser}}
-      
-        {{#if hasUserDecided}}
-        <div class="center-align flow-text">
-            <h5>Welcome {{currentUser.profile.name}}!</h5>
-            <br />
-Welcome to THS KTH International Reception. Please select events in which you want to participate. <br /><br />
-Every student is allowed to participate in {{FreeLimit}} free of charge activities and in {{PayableLimit}} payable activity. For payable activities you can only reserve the place online and then you have to pay on 18th of January in Nymble Drottning Kristinas väg 15. If you do not pay for payable activities, your reservation will be canceled.
-<br /><br />Please make sure that you confirm your choices at the bottom of the site, otherwise we won't process your registration. <br /><br /><i>Note: you can see & register only for events with free spots. If you can't find certain event it means that it's registration is already over.</i><br />
-            <br />
-        </div>
-            {{> atNavButton}}
-            <br /><br />
+    <div class="row">
+      <div class="col s12 m8 offset-m2 l4 offset-l4 z-depth-1">
+        {{> atForm}}
+      </div>
+    </div>
     
-            {{#if isInRole 'admin'}}
-    
-         <!--      <div class="card">
-                <div class="card-content">
-                    <span class="card-title">Users list</span>
-                    <br />
-                    <ul class="collapsible z-depth-0" style="border-style: none;">
-                      {{#each users}}
-                        {{> user}}
-                      {{/each}}
-                    </ul>
-                  </div>
-              </div> -->
-
-              <!-- {{> adminSettings}} -->
-    
-              <!-- {{initUsersLists}} -->
-    
-              {{> eventsDownload}}
-    
-            {{/if}}
-            
-            {{> days}}
-            
-            {{initCollapsible}}
-          
-            
-          {{else}}
-            {{> atNavButton}}
-            {{>afterDecision}}
-          {{/if}}
-          
-      {{/if }}
-
-  </div>
+  <!-- </div> -->
 </body>
 
