--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -4,17 +4,49 @@
 </head>
  
 <body>
-  <!-- <div class="container"> -->
+  <div class="container">
     <header>
       <h1>Rowbook</h1>
     </header>
+  </div>
 
     <div class="row">
       <div class="col s12 m8 offset-m2 l4 offset-l4 z-depth-1">
         {{> atForm}}
       </div>
     </div>
-    
-  <!-- </div> -->
-</body>
 
+    <div class="container">
+
+      {{#if currentUser}}
+        <h5>Welcome {{currentUser.profile.name}}!</h5>
+        
+        {{> atNavButton}}
+
+           {{#if isInRole 'admin'}}
+        
+             
+        
+             {{initUsersLists}}
+
+            {{>usersList}}
+            <br /><br />
+            {{>groupsList}}
+            <br /><br />
+            {{>boatsList}}
+            <br /><br />
+            {{>eventsList}}
+            <br /><br />
+            
+
+
+
+           {{/if}}
+
+
+
+
+      {{/if}}
+    </div>
+
+</body>
