--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -9,3 +9,64 @@
 .card-title.collapsible-header{
 	border-bottom:0px !important;
 }
+
+.selectize-input > input{
+	font-size: 0px;
+}
+
+.selectize-input.focus > input{
+	font-size: 1rem;
+}
+
+.input-field label{
+	z-index: 999;
+}
+
+.input-field:hover label{
+	font-size: 0.8rem;
+	-webkit-transform: translateY(-140%);
+	transform: translateY(-140%);
+}
+
+.selectize-input{
+	    /* background-color: transparent; */
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: 1rem;
+    margin: 0 0 15px 0;
+    padding: 0;
+    box-shadow: none;
+    box-sizing: content-box;
+    transition: all .3s;
+}
+.selectize-input.focus{
+	    /* background-color: transparent; */
+    border: none;
+    border-bottom: 1px solid #26a69a;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: 1rem;
+    margin: 0 0 15px 0;
+    padding: 0;
+    box-shadow: 0 1px 0 0 #26a69a;
+    box-sizing: content-box;
+    transition: all .3s;
+}
+.collapsible-header.btn i{
+
+    /* width: 2rem; */
+    font-size: 1.6rem;
+     line-height: inherit; 
+    display: block;
+    float: right;
+    text-align: center;
+    margin-left: inherit;
+ 	margin-right: inherit;
+       
+}
