--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -6,7 +6,7 @@
 <body>
 <nav>
  <div class="nav-wrapper z-depth-1" style="background-color: white">
-   <a href="#" class="brand-logo center" style="color: #444;">Rowbook</a>
+   <a href="#" class="brand-logo center" style="color: #444;" onclick="window.location.reload(true);">Rowbook</a>
    <div id="nav-mobile" class="right" style="color: #444; margin-right: 2em;">
       {{#if currentUser}}
         Welcome {{currentUser.profile.name}}!
