--- a/client/templates/boathouse_view.html
+++ b/client/templates/boathouse_view.html
@@ -36,12 +36,16 @@
 </template>
 
 <template name="ongoingSessions">
-	Ongoing Sessions:
-	<ul class="collapsible z-depth-0">
-		{{#each eventsOngoing}}
-			{{> eventOngoing}}
-		{{/each}}
-	</ul>
+	<div class="card z-depth-0">
+		<div class="card-content">
+			<span class="card-title">Ongoing Sessions:</span>
+			<ul class="collapsible z-depth-0">
+				{{#each eventsOngoing}}
+					{{> eventOngoing}}
+				{{/each}}
+			</ul>
+		</div>
+	</div>
 </template>
 
 <template name="eventOngoing">
@@ -94,12 +98,17 @@
 
 
 <template name="plannedSessions">
-	Planned Sessions:
-	<ul class="collapsible z-depth-0">
-		{{#each eventsPlanned}}
-			{{> eventPlanned}}
-		{{/each}}
-	</ul>
+	<div class="card z-depth-0">
+		<div class="card-content">
+
+			<span class="card-title">Planned Sessions:</span>
+			<ul class="collapsible z-depth-0">
+				{{#each eventsPlanned}}
+					{{> eventPlanned}}
+				{{/each}}
+			</ul>
+		</div>
+	</div>
 </template>
 
 <template name="eventPlanned">
@@ -159,12 +168,17 @@
 </template>
 
 <template name="doneSessions">
-	Finished Sessions:
-	<ul class="collapsible z-depth-0">
-		{{#each eventsDone}}
-			{{> eventDone}}
-		{{/each}}
-	</ul>
+	<div class="card z-depth-0">
+		<div class="card-content">
+
+			<span class="card-title">Finished Sessions: </span>
+			<ul class="collapsible z-depth-0">
+				{{#each eventsDone}}
+					{{> eventDone}}
+				{{/each}}
+			</ul>
+		</div>
+	</div>
 </template>
 
 <template name="eventDone">
