--- a/client/templates/admin_view.html
+++ b/client/templates/admin_view.html
@@ -16,12 +16,29 @@
 	</li>
 </template>
 
+<template name="userImport">
+
+	<p>Upload a CSV containing new users list
+		<br />
+	{{#unless uploading}}
+		<input type="file" name="uploadCSV">
+	{{else}}
+   		<p><i class="fa fa-spin fa-refresh"></i> Uploading files...</p>
+ 	{{/unless}}
+ 	</p>
+</template>
+
 <template name="usersList">
 	<ul class="card collapsible">
 		<li class="card-content">
 			<span class="collapsible-header card-title">Users</span>
 			<div class="collapsible-body">
 				<br />
+
+				{{>userImport}}
+
+				<br />
+
 				<ul class="collapsible z-depth-0">
 					{{#each users}}
 						{{> user}}
@@ -164,16 +181,24 @@
 
 				<ul class="collapsible z-depth-0">
 					{{#each eventsAdmin}}
-						{{> event}}
+						{{> eventDone}}
 					{{/each}}
 				</ul>
 
-				<ul class="card collapsible z-depth-0">
+				<center>
+
+					<button type="submit" class="btn btn-flat events-prev waves-effect waves-light">Previous<i class="material-icons left">chevron_left</i></button>
+
+					<button type="submit" class="btn btn-flat events-next waves-effect waves-light">Next<i class="material-icons right">chevron_right</i></button>
+				</center>
+				<br />
+
+				<!-- <ul class="card collapsible z-depth-0">
 					<li class="card-content ">
 						<span class="card-title collapsible-header">Add session</span>
 						{{> insertEventForm}}
 					</li>
-				</ul>
+				</ul> -->
 			</div>
 		</li>
 	</ul>
@@ -285,7 +310,40 @@
 	</ul>
 </template>
 
+<template name="sendMessage">
+	<ul class="card collapsible">
+		<li class="card-content">
+			<span class="collapsible-header card-title">Message rowers</span>
+			<div class="collapsible-body">
+				<br />
 
+					{{> quickForm id="newMessage" schema=messageSchema type="method" meteormethod="sendMessage"}}
+				<!-- <div class="row"> -->
+					<!-- {{#autoForm collection="Notifications" id="newMessage" type="method" meteormethod="sendMessage"}}
+						<fieldset>
+						   {{> afQuickField name="title"}}
+						</fieldset>
+					{{/autoForm}} -->
+				<!-- </div> -->
+
+				<!-- <ul class="collapsible z-depth-0">
+					{{#each allMessages}}
+						{{> message}}
+					{{/each}}
+				</ul>
+ -->
+
+
+			</div>	
+		</li>
+	</ul>
+</template>
+
+<template name="message">
+	<li>
+		<div class="collapsible-header"><i class="material-icons left">assessment</i>{{title}}</div>
+	</li>	
+</template>
 
 
 <template name="insertTrainingsForm">
@@ -320,6 +378,8 @@
 
 <template name="adminView">
 	 {{#if Template.subscriptionsReady}}
+	 	{{>sendMessage}}
+	 	<br /><br />
 	   	{{>eventsListAdmin}}
 		<br /><br />           
 		{{>usersList}}
@@ -330,7 +390,12 @@
 		<br /><br />
 		{{>trainingsList}}
 	{{else}}
-		<br />
-		<h2>Loading...</h2>
+		{{>Loading}}
 	{{/if}}
 </template>
+
+<template name="Loading">
+	<br /><br />
+	<center><p><i class="fa fa-refresh fa-spin fa-5x"></i></p></center>
+</template>
+
