--- a/client/templates/boathouse_view.html
+++ b/client/templates/boathouse_view.html
@@ -230,7 +230,7 @@
 	   	<!-- {{>eventsListUser}} -->
 	   	{{>rowNow}}
 	   	{{>ongoingSessions}}
-	   	{{>plannedSessions}}
+	   	<!-- {{>plannedSessions}} -->
 	   	{{>doneSessions}}
 	{{else}}
 		{>Loading}}
