--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -70,12 +70,12 @@
 </body>
 
 
-<template name="myNotificationsDropdown">
+<template name="notificationsDropdown">
     <a class="dropdown-button" data-activates="dropdown1" data-beloworigin="true">
     <ul>
-      <li><i class="fa fa-2x fa-bell right" style="color: grey;"></i></li>
+      <li><i class="fa fa-2x fa-bell right" style="color:{{newNotification}};"></i></li>
       <li>
-        <span class="fa-stack fa-lg right" style="color: grey; bottom: 6px; font-size: 0.8em;">
+        <span class="fa-stack fa-lg right" style="color:{{newNotification}}; bottom: 6px; font-size: 0.8em;">
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-inverse fa-stack-1x">{{notificationCount}}</i>
          </span>
@@ -84,17 +84,17 @@
 
     </a>
 
-    <ul id="dropdown1" class="dropdown-content" data-beloworigin="true" style="top: 30px !important;">
-      {{#each Notifications readFirst=false}} 
-        <li class="notification">
-          <a class="black-text "><i class=""></i>{{title}} <i class="fa fa-times-circle right" aria-hidden="true"></i></a>
+    <ul id="dropdown1" class="dropdown-content" data-beloworigin="true">
+      {{#each allMessages}} 
+        <li class="notification notRead{{read}}">
+          <a class="black-text" id="{{_id}}"><i class=""></i>{{title}} <i class="fa fa-times-circle right" aria-hidden="true"></i></a>
 
         </li>
       {{/each}}
     </ul>
 </template>
 
-<template name="myNotifications">
+<template name="Notifications">
   <ul class="notification-list">
     {{#each Notifications}}
       <li>
