--- a/client/templates/user_view.html
+++ b/client/templates/user_view.html
@@ -12,7 +12,7 @@
 
 				<ul class="collapsible z-depth-0">
 					{{#each eventsUser}}
-						{{> eventOngoing}}
+						{{> eventDone}}
 					{{/each}}					
 				</ul>
 
