--- a/client/templates/user_view.html
+++ b/client/templates/user_view.html
@@ -83,6 +83,10 @@
 					<strong>Total rowed distance:</strong> {{totalDistance}} kilometers<br />
 
 					<strong>Total time spent on the water:</strong> {{totalTime}} minutes<br />
+
+					<strong>Membership type</strong>: {{profile.membership}}<br />
+
+					<strong>Personnummer: {{profile.personnummer}}</strong>
 				</p>
 					
 
