--- a/client/templates/admin_view.html
+++ b/client/templates/admin_view.html
@@ -5,13 +5,30 @@
 			<!-- ID: {{_id}} -->
 			<!-- <p>Google mail: {{services.google.email}}</p> -->
 			<!-- <p>Facebook mail: {{services.facebook.email}}</p> -->
-			<p><strong>Mail:</strong> {{email}}<br />
-			<br />
+			<div class="row">
+			<div class="col s6">
+			<p>
 
-			{{#quickRemoveButton collection="Meteor.users" _id=this._id class="waves-effect btn"}}Delete user<i class="material-icons left">not_interested</i>{{/quickRemoveButton}}
+			<strong>Mail:</strong> {{email}}<br />
+
+			<strong>Total rowed distance:</strong> {{totalDistance}} kilometers<br />
+
+			<strong>Total time spent on the water:</strong> {{totalTime}} minutes<br />
+
+			<strong>Membership type</strong>: {{profile.membership}}<br />
+
+			<strong>Personnummer:</strong> {{profile.personnummer}}
+			</p>
+			</div>
+			<div class="col s6">
+			<p>
+
+			{{#quickRemoveButton collection="Meteor.users" _id=this._id class="waves-effect btn"}}Delete user<i class="material-icons left">not_interested</i>{{/quickRemoveButton}} <br /><br />
 
 			<a id="user-admin" class="waves-effect btn"><i class="material-icons left">grade</i>Give admin privileges</a>
-			</p>			
+			</p>
+			</div>
+			</div>
 		</div>
 	</li>
 </template>
