--- a/client/templates/admin_view.html
+++ b/client/templates/admin_view.html
@@ -330,7 +330,7 @@
 <template name="sendMessage">
 	<ul class="card collapsible">
 		<li class="card-content">
-			<span class="collapsible-header card-title">Message rowers</span>
+			<span class="collapsible-header card-title">Notificate rowers</span>
 			<div class="collapsible-body">
 				<br />
 
